--- a/src/classes/ChangePasswordControllerTest.cls
+++ b/src/classes/ChangePasswordControllerTest.cls
@@ -9,6 +9,7 @@
         controller.newPassword = 'qwerty1'; 
         controller.verifyNewPassword = 'qwerty1';                
         
-        System.assertEquals(controller.changePassword(),null);                           
+        System.assertEquals(controller.changePassword(),null);   
+        //add new change to Branch1                        
     }    
 }
